--- a/Leitner System Transfered 2/Leitner System Transfered 2.csproj
+++ b/Leitner System Transfered 2/Leitner System Transfered 2.csproj
@@ -82,6 +82,7 @@
     <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
