Changing system of card selection for training

--- a/Leitner System Transfered 2/Leitner System Transfered 2.csproj
+++ b/Leitner System Transfered 2/Leitner System Transfered 2.csproj
@@ -64,7 +64,7 @@
     <ManifestKeyFile>Leitner System Transfered 2_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
